--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>  <!-- Sürümü güncel tutmaya dikkat et -->
+        </dependency>
     </dependencies>
 
     <build>
